Minor: Fixes from static code analysis. Cleans up code, removes redundancy